tests/valid/Unsafe_Valid_1.whiley
unsafe function f(int x) -> (int y):
    assert x >= 0
    return x

public export method test():
    assert 1 == 1
