tests/invalid/Assert_Invalid_1.whiley
function f(int z) -> int:
    assert z
    return 0
